--- a/static/css/study.css
+++ b/static/css/study.css
@@ -28,7 +28,7 @@ body {
     animation: rotate 90s infinite linear;
   }
   
-  .star {
+.star {
     width: 2px;
     height: 2px;
     background: #F7F7B6;
@@ -39,3 +39,86 @@ body {
     transform: translate3d(0, 0, -300px);
     backface-visibility: hidden;
   }
+.panel-group{
+  height: 87% !important;
+  overflow-y: auto;
+  overflow-x: hidden;
+  text-align: left;
+}
+.panel{
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.panel.panel-default ul a{
+  display: block;
+  background-color: #F7F7B6;
+}
+.panel-default{
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.navbar1 {
+  position: fixed !important;
+  height: 100% !important;
+  z-index: 1;
+  text-align: center;
+    
+}
+
+/* Main Content Style*/
+#main-doc {
+  position: absolute;
+  top: 0px;
+  left: 290px;
+  padding: 0px 25px;
+  background-color: #fff;
+}
+
+#main-doc h2 {
+  font-family: 'Work Sans', sans-serif;
+  font-size: 2em;
+}
+
+section {
+  padding-top: 80px;
+  padding-bottom: 50px;
+  background:
+    linear-gradient(
+      to left,
+      rgba(224, 247, 250, 0.6) 10%,
+      rgba(128, 208, 225, 0.6) 50%,
+      rgba(77, 222, 234, 0.6) 100%
+    )
+    left
+    bottom
+    no-repeat;
+  background-size: 100% 3px ;
+}
+  
+section#Reference {
+  background: #fff;
+}
+  
+section article {
+  margin: 10px;
+  font-size: 0.96em;
+  background-color: antiquewhite;
+}
+  
+section article li {
+  margin: 10px 0px 0px 20px;
+}
+
+code {
+  display: block;
+  text-align: left;
+  white-space: pre;
+  line-height: 2;
+  background-color: #e0f7fa;
+  margin: 10px;
+  padding: 15px;
+  border-radius: 5px;
+  position: relative;
+  word-break: normal;
+  word-wrap: normal;
+}
